<resources>
    <string name="app_name">ZOA 棚管理</string>
    <string name="btnScan_Label">カメラ起動</string>
    <string name="btnHistory_Label">履歴</string>
    <string name="wait_txt">お待ちください……</string>
    <string name="nsBtnA">POPを撤去</string>
    <string name="nsBtnB">移送を依頼する</string>
    <string name="nsTxtA">削定番品です</string>
    <string name="nsTxtB">全店在庫 %d 週売</string>
    <string name="nsTxtC">粗利 %,d</string>
    <string name="stBtnA">発点増申請</string>
    <string name="stTxtA">定番品 発点%d</string>
    <string name="osBtnA">陳列(または在庫check)指示</string>
    <string name="osBtnB">POP作成</string>
    <string name="osTxtA">在庫があります</string>
    <string name="slBtnA">全選択</string>
    <string name="slBtnB">全解除</string>
    <string name="slBtnC">送信</string>
    <string name="noBtnA">次のバーコードを読み取る</string>
    <string name="noBtnB">メニューに戻る</string>
    <string name="asCbxA">送信する</string>
    <string name="ssTxtA">送信中……</string>
    <string name="dtTxtA">(商:%-7s) 状態:%-5s 粗:%,5d\n
    \n
    店 在庫 在発 移送 発点 週１ 週２ 週３\n
    %s %4d  %4d  %4d  %4d  %4d  %4d  %4d\n
    全 %4d  %4d  %4d  %4d  %4d  %4d  %4d</string>
    <string name="dtSb">(商:%s)</string>
    <string name="dtJy">状態:%s</string>
    <string name="dtAr">粗:%,d</string>
    <string name="dtMi">%s</string>
    <string name="dtNum">%d</string>
    <string name="txtHdMise">店</string>
    <string name="txtHdZaiko">在庫</string>
    <string name="txtHdZaiHatsu">在発</string>
    <string name="txtHdIso">移送</string>
    <string name="txtHdHatten">発点</string>
    <string name="txtHdSyu1">週１</string>
    <string name="txtHdSyu2">週２</string>
    <string name="txtHdSyu3">週３</string>
    <string name="txtZMise">全</string>
    <string name="msBtnA">POPを外す</string>
    <string name="msBtnB">POPを出力</string>
    <string name="msBtnC">陳列･在庫チェック</string>
    <string name="msBtnD">補充依頼する</string>
    <string name="msBtnE">発注点を増やす</string>
    <string name="msBtnF">発注点を減らす</string>
    <string name="msBtnG">何もしない</string>
</resources>
