<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nsTxtA"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/nsTxtA" />

        <Button
            android:id="@+id/nsBtnA"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:onClick="nsBtnA_Click"
            android:text="@string/nsBtnA" />

        <Button
            android:id="@+id/nsBtnB"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:onClick="nsBtnB_Click"
            android:text="@string/nsBtnB" />

        <TextView
            android:id="@+id/nsTxtB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/nsTxtB" />

        <TextView
            android:id="@+id/nsTxtC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/nsTxtC" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>