<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/stTxtA"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/stTxtA" />

        <Button
            android:id="@+id/stBtnA"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:onClick="stBtnA_Click"
            android:text="@string/stBtnA" />

        <TextView
            android:id="@+id/stTxtB"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/dtTxtA" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>