<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/osTxtA"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/osTxtA" />

        <Button
            android:id="@+id/osBtnA"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:onClick="osBtnA_Click"
            android:text="@string/osBtnA" />

        <Button
            android:id="@+id/osBtnB"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:onClick="osBtnB_Click"
            android:text="@string/osBtnB" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>